<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="89dp">

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="37dp"
        android:text="@string/strReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="165dp"
        app:layout_constraintBottom_toTopOf="@+id/txvMoneyValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ryoutu" />

    <TextView
        android:id="@+id/txv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txvMoney"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/txvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:text="@string/strMonet"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintBottom_toTopOf="@+id/btnUp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvMoneyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strZero"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintStart_toStartOf="@+id/txvMoney"
        app:layout_constraintTop_toBottomOf="@+id/txvMoney" />

    <TextView
        android:id="@+id/txvBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="33dp"
        android:text="@string/strBet"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvMoneyValue" />

    <TextView
        android:id="@+id/txvBetValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="11dp"
        android:text="@string/strZero"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintStart_toStartOf="@+id/txvBet"
        app:layout_constraintTop_toBottomOf="@+id/txvBet" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:text="@string/strStart"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="@string/strUp"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintBottom_toTopOf="@+id/btnDown"
        app:layout_constraintStart_toStartOf="@+id/btnDown" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:text="@string/strDown"
        android:textSize="@dimen/lblMiddleSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>