<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2Activity"
    tools:layout_editor_absoluteY="89dp">

    <ImageButton
        android:id="@+id/btnSlot4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="29dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/btnSlot2"
        app:layout_constraintEnd_toStartOf="@+id/btnSlot2"
        app:layout_constraintStart_toStartOf="@+id/txvMainMsg"
        app:layout_constraintTop_toTopOf="@+id/btnSlot2"
        app:srcCompat="@drawable/question" />

    <TextView
        android:id="@+id/txv_Title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txvMoney3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strMonet"
        android:textSize="@dimen/lblMiddleSize"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="559dp" />

    <TextView
        android:id="@+id/txvMoneyValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strZero"
        android:textSize="@dimen/lblMiddleSize" />

    <TextView
        android:id="@+id/txvBet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strBet"
        android:textSize="@dimen/lblMiddleSize"
        tools:layout_editor_absoluteX="50dp" />

    <ImageButton
        android:id="@+id/btnSlot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="29dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/btnSlot2"
        app:layout_constraintEnd_toStartOf="@+id/btnSlot2"
        app:layout_constraintStart_toStartOf="@+id/txvMainMsg"
        app:layout_constraintTop_toTopOf="@+id/btnSlot2"
        app:srcCompat="@drawable/question" />

    <TextView
        android:id="@+id/txvBetValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strZero"
        android:textSize="@dimen/lblMiddleSize" />

</android.support.constraint.ConstraintLayout>